<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"

    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/opc_menu_1"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_lateral_opcion_1"/>

        <item
            android:id="@+id/opc_menu_2"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_lateral_opcion_2">
            <menu>
                <item
                    android:id="@+id/opc_menu_3"
                    android:icon="@drawable/ic_menu_slideshow"
                    android:title="@string/menu_lateral_opcion_3" />
                <item android:id="@+id/opc_menu_4"
                    android:icon="@drawable/ic_menu_manage"
                    android:title="@string/menu_lateral_opcion_4"/>

            </menu>

        </item>
        <item
            android:id="@+id/opc_admin"
            android:title="@string/menu_admin_titulo">
            <menu>
                <item
                    android:id="@+id/opc_menu_admin_1"
                    android:title="@string/menu_admin_opc_1">
                <menu>

                    <item
                        android:id="@+id/opc_menu_admin_1_1"
                        android:title="@string/menu_admin_opc_1_1" />
                    <item
                        android:id="@+id/opc_menu_admin_1_2"
                        android:title="@string/menu_admin_opc_1_2" />
                    <item
                        android:id="@+id/opc_menu_admin_1_3"
                        android:title="@string/menu_admin_opc_1_3" />
                </menu>
                </item>
                <item
                    android:id="@+id/opc_menu_admin_2"
                    android:title="@string/menu_admin_opc_2" />
                <item
                    android:id="@+id/opc_menu_admin_3"
                    android:title="@string/menu_admin_opc_3" />
                <item
                    android:id="@+id/opc_menu_admin_4"
                    android:title="@string/menu_admin_opc_4" />
            </menu>

        </item>
    </group>
</menu>