<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewNroReserva"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewDatoCine"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewDatoPelicula"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewFecha"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewHorario"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewEntradas"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewSala"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtViewPagoTotal"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="288dp" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleCodReserva"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="34dp" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDatoCine"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="72dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDatoPelicula"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="102dp" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleFecha"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="136dp" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleHorario"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="171dp" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="203dp" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titleDatoSala"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="235dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/titlePagoTotal"
        tools:layout_editor_absoluteX="214dp"
        tools:layout_editor_absoluteY="288dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Button"
        tools:layout_editor_absoluteX="74dp"
        tools:layout_editor_absoluteY="359dp" />
</android.support.constraint.ConstraintLayout>