<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff">

        <!--  Comienzo de header-->
        <LinearLayout
            android:id="@+id/header"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/cabecera"
            android:paddingBottom="5dip"
            android:paddingTop="5dip">
            <!-- Comienzo logo-->
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip" />
            <!-- Termino logo -->
        </LinearLayout>
        <!--  Termino de Header -->

        <!-- Pie comienzo -->
        <LinearLayout
            android:id="@+id/footer"
            android:layout_width="fill_parent"
            android:layout_height="90dip"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal"></LinearLayout>
        <!-- Place footer next to header to set z-index property to minus value -->
        <!-- Pie fin -->

        <!-- Seccion botones-->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/header"
            android:orientation="vertical"
            android:padding="10dip">
            <!-- Boton "Alta de cine"  -->
            <Button
                android:id="@+id/btnAlta"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btnAlta" />
            <!-- Boton "Administración"  -->
            <Button
                android:id="@+id/btnBaja"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btnBaja" />

            <Button
                android:id="@+id/btnModificacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btnModificacion" />

            <Button
                android:id="@+id/btnListCine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btnDatosDeCine" />

            <Button
                android:id="@+id/btnListCines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dip"
                android:text="@string/btnDatosDeCines" />

        </LinearLayout>

        <!-- Fin seccion Botones -->

    </RelativeLayout>

</ScrollView>